--- a/client/index.html
+++ b/client/index.html
@@ -31,8 +31,9 @@
         <div class="card border-secondary mb-3 ml-1 mr-1" style="max-width: 20rem;">
           <div class="card-header">Notes</div>
           <div class="card-body">
-            <h4 class="card-title">Coming soon</h4>
-            <p class="card-text">...</p>
+            <h4 class="card-title">A lightweight note manager</h4>
+            <p class="card-text">Used to create/manager/share notes</p>
+            <a href="notes_landing.html">View page</a>
           </div>
         </div>
         <div class="card border-secondary mb-3 ml-1 mr-1" style="max-width: 20rem;">
