--- a/client/note_editor.html
+++ b/client/note_editor.html
@@ -38,6 +38,7 @@
           </div>
           <div class="modal-body">
             <form class="form-group">
+              <input type="hidden" id="modal-id"></input>
               <div class="row modal-row">
                 <div>Title</div>
                 <input type="text" class="form-control" id="modal-title" placeholder="Page Title"/>
