--- a/client/index.html
+++ b/client/index.html
@@ -7,40 +7,104 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title><<Name>></title>
 
   </head>
   <body>
 
-    <div class="container jumbotron">
-      <div class="row">
-        <div class="col-12">
-          <h1>A new better productivity tool</h1>
-          <h3>This is placeholder really. Not meant to look good yet</h3>
+    <div class="w-100">
+      <div class="position-fixed sticky-top index-nav-bar w-100 d-flex flex-row">
+        <div class="p-3 mr-auto align-items-center d-flex">
+          Welcome back ~user~
+        </div>
+        <div class="p-3">
+          <div class="dropdown show">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              ~username~
+            </a>
+
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="#">Settings</a>
+              <a class="dropdown-item" href="#">User Settings</a>
+              <a class="dropdown-item" href="#">Session Info</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="card border-secondary mb-3 ml-1 mr-1" style="max-width: 20rem;">
-          <div class="card-header">Credentials</div>
-          <div class="card-body">
-            <h4 class="card-title">A simple credential manager</h4>
-            <p class="card-text">The purpose of this is to create a lightweight but secure credential manager</p>
-            <a href="credentials.html">View page</a>
+      <div class="index-content-container w-100">
+        <div class="row p-2">
+          <p class="col-12">
+            <h1>Recent updates</h1>
+          </p>
+        </div>
+        <div class="row d-flex">
+          <div class="flex-column col-sm-6">
+            <div class="card">
+              <h3 class="card-header"><a href="notes_landing.html">Notes</a></h3>
+              <div class="card-body">
+                <table class="table table-light table-hover">
+                  <thead>
+                    <th>Action</th>
+                    <th>Title</th>
+                    <th>Date</th>
+                  </thead>
+                  <tbody>
+                    <td>Example</td>
+                    <td>Example 2</td>
+                    <td>Example 3</td>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="flex-column col-sm-6">
+            <div class="card">
+              <h3 class="card-header"><a href="credentials.html">Credentials</a></h3>
+              <div class="card-body">
+                <table class="table table-light table-hover">
+                  <thead>
+                    <th>Action</th>
+                    <th>Title</th>
+                    <th>Date</th>
+                  </thead>
+                  <tbody>
+                    <td>Example</td>
+                    <td>Example 2</td>
+                    <td>Example 3</td>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="card border-secondary mb-3 ml-1 mr-1" style="max-width: 20rem;">
-          <div class="card-header">Notes</div>
-          <div class="card-body">
-            <h4 class="card-title">A lightweight note manager</h4>
-            <p class="card-text">Used to create/manager/share notes</p>
-            <a href="notes_landing.html">View page</a>
-          </div>
+        <div class="row p-2">
+          <h1>Features coming soon</h2>
         </div>
-        <div class="card border-secondary mb-3 ml-1 mr-1" style="max-width: 20rem;">
-          <div class="card-header">User management</div>
-          <div class="card-body">
-            <h4 class="card-title">Coming soon</h4>
-            <p class="card-text">...</p>
+        <div class="row d-flex">
+          <div class="col-sm-6">
+            <div class="card">
+              <h3 class="card-header">
+                Improvements
+              </h3>
+              <div class="card-body">
+                <ul>
+                  <li>A more functional and clear home page</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card">
+              <h3 class="card-header">
+                New features
+              </h3>
+              <div class="card-body">
+                <ul>
+                  <li>A navigation bar after you leave the home page</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
