Implemented getting username on home page

--- a/client/index.html
+++ b/client/index.html
@@ -16,15 +16,15 @@
     <div class="w-100">
       <div class="position-fixed sticky-top index-nav-bar w-100 d-flex flex-row">
         <div class="p-3 mr-auto align-items-center d-flex">
-          Welcome back ~user~
+          Welcome back <span id="username_for_welcome_back">~user~</span>
         </div>
         <div class="p-3">
           <div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="username_settings_button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               ~username~
             </a>
 
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <div class="dropdown-menu" aria-labelledby="username_settings_button">
               <a class="dropdown-item" href="#">Settings</a>
               <a class="dropdown-item" href="#">User Settings</a>
               <a class="dropdown-item" href="#">Session Info</a>
