Fixed formatting of username display on homepage

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <div class="w-100">
       <div class="position-fixed sticky-top index-nav-bar w-100 d-flex flex-row">
         <div class="p-3 mr-auto align-items-center d-flex">
-          Welcome back <span id="username_for_welcome_back">~user~</span>
+          Welcome back,&nbsp;<span id="username_for_welcome_back">~user~</span>
         </div>
         <div class="p-3">
           <div class="dropdown show">
