Added copy to clipboard functionality to credential modal

--- a/client/credentials.html
+++ b/client/credentials.html
@@ -97,12 +97,12 @@
                 <div class="row modal-row">
                   <div class="col-4">Username</div>
                   <input type="text" class="col-7 form-control" id="modal-username"/>
-                  <button class="col-1 btn btn-primary input-group-append">&#x1f4cb;</button>
+                  <button class="col-1 btn btn-primary input-group-append" id="modal-copy-username-button">&#x1f4cb;</button>
                 </div>
                 <div class="row modal-row">
                   <div class="col-4">Password</div>
                   <input type="password" class="col-7 form-control" id="modal-password"/>
-                  <button class="col-1 btn btn-primary input-group-append">&#x1f4cb;</button>
+                  <button class="col-1 btn btn-primary input-group-append" id="modal-copy-password-button">&#x1f4cb;</button>
                 </div>
                 <div class="row modal-row">
                   <div class="col-4">Target</div>
