Added logout routing to app and server

--- a/client/index.html
+++ b/client/index.html
@@ -8,30 +8,47 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./node_modules/hamburgers/dist/hamburgers.min.css">
     <title><<Name>></title>
 
   </head>
   <body>
 
     <div class="w-100">
-      <div class="position-fixed sticky-top index-nav-bar w-100 d-flex flex-row">
-        <div class="p-3 mr-auto align-items-center d-flex">
-          Welcome back,&nbsp;<span id="username_for_welcome_back">~user~</span>
-        </div>
-        <div class="p-3">
-          <div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="username_settings_button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              ~username~
-            </a>
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-brand dropdown show">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="username_settings_button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            ~username~
+          </a>
 
-            <div class="dropdown-menu" aria-labelledby="username_settings_button">
-              <a class="dropdown-item" href="#">Settings</a>
-              <a class="dropdown-item" href="#">User Settings</a>
-              <a class="dropdown-item" href="#">Session Info</a>
-            </div>
-          </div>
+          <ul class="dropdown-menu" aria-labelledby="username_settings_button">
+            <li><a href="#" class="dropdown-item">Settings</a></li>
+            <li><a href="#" class="dropdown-item">User Settings</a></li>
+            <li><a href="#" class="dropdown-item">Session info</a></li>
+            <li role="separator" class="dropdown-divider"></li>
+            <li><a href="#" class="dropdown-item" id="logout-button">Log out</a></li>
+          </ul>
         </div>
-      </div>
+
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="credentials.html">Credentials</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="notes_landing.html">Notes</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+
       <div class="index-content-container w-100">
         <div class="row p-2">
           <p class="col-12">
